--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   circular_bottom_navigation: ^2.4.0
   botton_nav_bar: ^1.0.2
   font_awesome_flutter: ^10.7.0
+  http: ^1.2.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
